@@ -114,8 +114,8 @@ Digital normalization
 Read handling: interleaving, splitting, etc.
 ============================================
 
-.. autoprogram:: sweep-reads-buffered:get_parser()
-        :prog: sweep-reads-buffered.py
+.. autoprogram:: sweep-reads:get_parser()
+        :prog: sweep-reads.py
 
 .. autoprogram:: extract-paired-reads:get_parser()
         :prog: extract-paired-reads.py
