@@ -1,3 +1,8 @@
+2014-06-14  Titus Brown  <t@idyll.org>
+
+    * doc/scripts.txt, tests/test_scripts.py, scripts/sweep-reads.py:
+	renamed sweep-reads-buffered to sweep-reads.
+
 2014-06-13  Michael R. Crusoe  <mcrusoe@msu.edu>
 
     * Makefile: split coverity target in two: -build and -upload. Added
